# TokenEff

./: LICENSE  README.md  pyproject.toml  translate.py
examples/: example_toon.py
src/tokeneff/: __init__.py  cli.py
src/tokeneff/core/: base.py  models.py
src/tokeneff/core/converters/: json_converter.py
src/tokeneff/core/translation/: languages.py  translation.py
src/tokeneff/formatters/: toon_formatter.py
src/tokeneff/utils/: metrics.py  tokenizer_utils.py
tests/: test_json.py  test_json_to_toon_with_translate.py
