[project]
name = "tokeneff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raghvender1205", email = "raghvender1205@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "tiktoken>=0.12.0",
]

[project.scripts]
tokeneff = "tokeneff:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
